<resources>
    <string name="app_name">货咕咕</string>


    <string name="main_homepage">主页</string>
    <string name="main_terminal">终端</string>
    <string name="main_function">功能</string>
    <string name="main_mine">我的</string>
    <string name="phone_login">手机号登录</string>
    <string name="login_phone_inert_hint">请输入手机号</string>
    <string name="register_post_code">获取验证码</string>


    <string name="sex_man">男生</string>
    <string name="sex_woman">女生</string>
    <string name="nick_name">昵称</string>
    <string name="user_head">头像</string>
    <string name="sex_str">性别</string>
    <string name="birthday_str">年龄</string>
    <string name="birthday_default">您的年龄</string>
    <string name="platform_accounts">平台账号</string>
    <string name="university_default">母校在哪里</string>
    <string name="hometown_str">家乡</string>
    <string name="hometown_default">你的家乡在哪里</string>
    <string name="interest_str">兴趣</string>
    <string name="interest_default">告诉大家,你是哪方面的达人</string>
    <string name="user_intro">个人简介</string>
    <string name="user_intro_default">说点什么,让大家快速认识你</string>
    <string name="my_address">我的地址</string>
    <string name="my_address_default">写一下吧,不小心收到惊喜怎么办</string>
    <string name="personal_info">个人信息</string>
    <string name="address_list">收货地址</string>
    <string name="upload_needs">上传需求</string>
    <string name="follow_goods">关注商品</string>
</resources>