<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/share_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="15dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_head_lable"
                    style="@style/c222222_16"
                    android:layout_weight="1"
                    android:text="@string/user_head"
                     />


                <com.gcssloop.widget.RCImageView
                    android:id="@+id/riv_item_head"
                    android:layout_width="37.5dp"
                    android:layout_height="37.5dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/icon_my_user"
                    app:round_corner="25dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="16dp"
                android:background="@color/coloreeeeee" />

            <LinearLayout
                android:id="@+id/lly_platform_accounts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:orientation="horizontal"
               >

                <TextView
                    style="@style/c222222_16"
                    android:text="@string/platform_accounts"
                     />

                <TextView
                    android:id="@+id/tv_platform_accounts"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1.0"
                    android:drawablePadding="5dp"
                    android:gravity="right"
                    android:textColor="@color/color999999"
                    android:textColorHint="@color/color999999"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="16dp"
                android:background="@color/coloreeeeee" />


            <LinearLayout
                android:id="@+id/lly_nickname_lable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:orientation="horizontal"
               >

                <TextView
                    style="@style/c222222_16"
                    android:text="@string/nick_name"
                     />

                <TextView
                    android:id="@+id/tv_nickname"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1.0"
                    android:drawableRight="@mipmap/my_more_icon"
                    android:drawablePadding="10dp"
                    android:gravity="right"
                    android:hint="您的昵称"
                    android:textColor="@color/color999999"
                    android:textColorHint="@color/color999999"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="16dp"
                android:background="@color/coloreeeeee" />


            <LinearLayout
                android:id="@+id/lly_sex_lable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:orientation="horizontal"
                >

                <TextView
                    style="@style/c222222_16"
                    android:text="@string/sex_str"
                    />

                <TextView
                    android:id="@+id/tv_sex"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1.0"
                    android:drawableRight="@mipmap/my_more_icon"
                    android:drawablePadding="5dp"
                    android:gravity="right"
                    android:textColor="@color/color999999"
                    android:textColorHint="@color/color999999"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="16dp"
                android:background="@color/coloreeeeee" />


            <LinearLayout
                android:id="@+id/lly_birthday_lable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:orientation="horizontal"
                >

                <TextView
                    style="@style/c222222_16"
                    android:text="@string/birthday_str"
                    />

                <TextView
                    android:id="@+id/tv_birthday"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1.0"
                    android:drawableRight="@mipmap/my_more_icon"
                    android:drawablePadding="5dp"
                    android:gravity="right"
                    android:hint="@string/birthday_default"
                    android:textColor="@color/color999999"
                    android:textColorHint="@color/color999999"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>